yangi section qoshildi

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="/css/general.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -13,4 +14,411 @@
       crossorigin="anonymous"
     />
   </head>
+  <body>
+    <!-- sessions sections  by azizjon-->
+    <div class="container">
+      <div class="session-section">
+        <div class="session-sarlavha">
+          <h1 class="session-saelavham">Sessions</h1>
+        </div>
+        <div class="section-cards">
+          <div class="section-card">
+            <div class="section-card-name">
+              <h2 class="section-cards-name">First session</h2>
+              <div class="section-card-name2">
+                <p><i class="far fa-clock"></i> Duration: 6 hour</p>
+                <p><i class="far fa-calendar-minus"></i> Date: November 5</p>
+                <p><i class="fab fa-youtube"></i> View video</p>
+              </div>
+            </div>
+            <div class="section-card-img">
+              <div class="azizjon">
+                <img src="./images/222.png" alt="" />
+              </div>
+
+              <p class="images-card-about">
+                In the first session, we will consider design thinking and its
+                understanding as well as different models of design thinking and
+                the design process, and we will better remember this process
+                with various examples. We will also discuss problem solving
+                techniques together and understand the concept of user
+                experience and usability.
+              </p>
+            </div>
+          </div>
+
+          <div class="section-card">
+            <div class="section-card-name">
+              <h2 class="section-cards-name">Second session</h2>
+              <div class="section-card-name2">
+                <p><i class="far fa-clock"></i> Duration: 6 hour</p>
+                <p><i class="far fa-calendar-minus"></i> Date: November 5</p>
+                <p><i class="fab fa-youtube"></i> View video</p>
+              </div>
+            </div>
+            <div class="section-card-img">
+              <div class="azizjon">
+                <img src="./images/222.png" alt="" />
+              </div>
+
+              <p class="images-card-about">
+                In the second session, we will discuss service design, first
+                discussing “What is a service?” Then we practice how to create
+                thle of the user in the short run. We are also going to create a
+                way to measure the performance of our product so that we can
+                ensure the quality of the design solutions performance.
+              </p>
+            </div>
+          </div>
+
+          <div class="section-card">
+            <div class="section-card-name">
+              <h2 class="section-cards-name">Third session</h2>
+              <div class="section-card-name2">
+                <p><i class="far fa-clock"></i> Duration: 6 hour</p>
+                <p><i class="far fa-calendar-minus"></i> Date: November 5</p>
+                <p><i class="fab fa-youtube"></i> View video</p>
+              </div>
+            </div>
+            <div class="section-card-img">
+              <div class="azizjon">
+                <img src="./images/222.png" alt="" />
+              </div>
+
+              <p class="images-card-about">
+                In the first session, we will consider design thinking and its
+                understanding as well as different models of design thinking and
+                the design process, and we will better remember this process
+                with various examples. We will also discuss problem solving
+                techniques together and understand the concept of user
+                experience and usability.
+              </p>
+            </div>
+          </div>
+
+          <div class="section-card">
+            <div class="section-card-name">
+              <h2 class="section-cards-name">Fourth session</h2>
+              <div class="section-card-name2">
+                <p><i class="far fa-clock"></i> Duration: 6 hour</p>
+                <p><i class="far fa-calendar-minus"></i> Date: November 5</p>
+                <p><i class="fab fa-youtube"></i> View video</p>
+              </div>
+            </div>
+            <div class="section-card-img">
+              <div class="azizjon">
+                <img src="./images/222.png" alt="" />
+              </div>
+
+              <p class="images-card-about">
+                In the first session, we will consider design thinking and its
+                understanding as well as different models of design thinking and
+                the design process, and we will better remember this process
+                with various examples. We will also discuss problem solving
+                techniques together and understand the concept of user
+                experience and usability.
+              </p>
+            </div>
+          </div>
+
+          <div class="section-card">
+            <div class="section-card-name">
+              <h2 class="section-cards-name">Fiveth session</h2>
+              <div class="section-card-name2">
+                <p><i class="far fa-clock"></i> Duration: 6 hour</p>
+                <p><i class="far fa-calendar-minus"></i> Date: November 5</p>
+                <p><i class="fab fa-youtube"></i> View video</p>
+              </div>
+            </div>
+            <div class="section-card-img">
+              <div class="azizjon">
+                <img src="./images/7272.png" alt="" />
+                <img src="./images/7272.png" alt="" />
+              </div>
+
+              <p class="images-card-about">
+                In the second session, we will discuss service design, first
+                discussing “What is a service?” Then we practice how to create
+                the right conditions for them in the long run to stay loyal to
+                our product based on the actual needs of our audience and to
+                create solutions that will reduce the hassle of the user in the
+              </p>
+            </div>
+          </div>
+
+          <div class="section-card">
+            <div class="section-card-name">
+              <h2 class="section-cards-name">Sexth session</h2>
+              <div class="section-card-name2">
+                <p><i class="far fa-clock"></i> Duration: 6 hour</p>
+                <p><i class="far fa-calendar-minus"></i> Date: November 5</p>
+                <p><i class="fab fa-youtube"></i> View video</p>
+              </div>
+            </div>
+            <div class="section-card-img">
+              <div class="azizjon">
+                <img src="./images/222.png" alt="" />
+                <img src="./images/23423.png" alt="" />
+              </div>
+
+              <p class="images-card-about">
+                Today, the world is a world of interaction, in the sixth session
+                we understand users trying to find the best way to interact with
+                them and bring the emotions, perceptions, and awareness of the
+                users to the forefront. We will explore the concept of ucts
+                together, as well as discussing the appropriate digital
+                marketing toolkit.
+              </p>
+            </div>
+          </div>
+
+          <div class="section-card">
+            <div class="section-card-name">
+              <h2 class="section-cards-name">Seventh session</h2>
+              <div class="section-card-name2">
+                <p><i class="far fa-clock"></i> Duration: 6 hour</p>
+                <p><i class="far fa-calendar-minus"></i> Date: November 5</p>
+                <p><i class="fab fa-youtube"></i> View video</p>
+              </div>
+            </div>
+            <div class="section-card-img">
+              <div class="azizjon">
+                <img src="./images/222.png" alt="" />
+              </div>
+
+              <p class="images-card-about">
+                In the first session, we will consider design thinking and its
+                understanding as well as different models of design thinking and
+                the design process, and we will better remember this process
+                with various examples. We will also discuss problem solving
+                techniques together and understand the concept of user
+                experience and usability.
+              </p>
+            </div>
+          </div>
+
+          <div class="section-card">
+            <div class="section-card-name">
+              <h2 class="section-cards-name">Eights session</h2>
+              <div class="section-card-name2">
+                <p><i class="far fa-clock"></i> Duration: 6 hour</p>
+                <p><i class="far fa-calendar-minus"></i> Date: November 5</p>
+                <p><i class="fab fa-youtube"></i> View video</p>
+              </div>
+            </div>
+            <div class="section-card-img">
+              <div class="azizjon">
+                <img src="./images/222.png" alt="" />
+                <img src="./images/23423.png" alt="" />
+              </div>
+
+              <p class="images-card-about">
+                In the first session, we will consider design thinking and its
+                understanding as well as different models of design thinking and
+                the design process, and we will better remember this process
+                with various examples. We will also discuss problem solving
+                techniques together and understand the concept of user
+                experience and usability.
+              </p>
+            </div>
+          </div>
+
+          <div class="section-card">
+            <div class="section-card-name">
+              <h2 class="section-cards-name">Nineth session</h2>
+              <div class="section-card-name2">
+                <p><i class="far fa-clock"></i> Duration: 6 hour</p>
+                <p><i class="far fa-calendar-minus"></i> Date: November 5</p>
+                <p><i class="fab fa-youtube"></i> View video</p>
+              </div>
+            </div>
+            <div class="section-card-img">
+              <div class="azizjon">
+                <img src="./images/222.png" alt="" />
+                <img src="./images/7272.png" alt="" />
+              </div>
+
+              <p class="images-card-about">
+                In the first session, we will consider design thinking and its
+                understanding as well as different models of design thinking and
+                the design process, and we will better remember this process
+                with various examples. We will also discuss problem solving
+                techniques together and understand the concept of user
+                experience and usability.
+              </p>
+            </div>
+          </div>
+
+          <div class="section-card">
+            <div class="section-card-name">
+              <h2 class="section-cards-name">Tenth session</h2>
+              <div class="section-card-name2">
+                <p><i class="far fa-clock"></i> Duration: 6 hour</p>
+                <p><i class="far fa-calendar-minus"></i> Date: November 5</p>
+                <p><i class="fab fa-youtube"></i> View video</p>
+              </div>
+            </div>
+            <div class="section-card-img">
+              <div class="azizjon">
+                <img src="./images/222.png" alt="" />
+              </div>
+
+              <p class="images-card-about">
+                In the 10th session we will start with the software and together
+                we will learn what design software capabilities are and what
+                ideas can be made with them and that they are not as complex as
+                the cockpit!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- sectiomn qimi tugadi -->
+    <!--master qismini boshlandi -->
+    <div class="container">
+      <div class="master-section">
+        <div class="session-sarlavha aa12">
+          <h1 class="session-saelavham">Master</h1>
+        </div>
+        <div class="master-card">
+          <div class="master-cards">
+            <img src="./images/72676.png" alt="" />
+            <h2 class="master-card-name">Shervin Mashayekh</h2>
+            <h3 class="master-card-nm">Additive Product Manager</h3>
+          </div>
+
+          <div class="master-cards">
+            <img src="./images/photo_2018-11-05_23-52-41.png" alt="" />
+            <h2 class="master-card-name">Shervin Mashayekh</h2>
+            <h3 class="master-card-nm">Additive Product Manager</h3>
+          </div>
+
+          <div class="master-cards">
+            <img src="./images/22222.png" alt="" />
+            <h2 class="master-card-name">Shervin Mashayekh</h2>
+            <h3 class="master-card-nm">Additive Product Manager</h3>
+          </div>
+
+          <div class="master-cards">
+            <img src="./images/hasan1.png" alt="" />
+            <h2 class="master-card-name">Shervin Mashayekh</h2>
+            <h3 class="master-card-nm">Additive Product Manager</h3>
+          </div>
+
+          <div class="master-cards">
+            <img src="./images/7272.png" alt="" />
+            <h2 class="master-card-name">Shervin Mashayekh</h2>
+            <h3 class="master-card-nm">Additive Product Manager</h3>
+          </div>
+
+          <div class="master-cards">
+            <img src="./images/222.png" alt="" />
+            <h2 class="master-card-name">Shervin Mashayekh</h2>
+            <h3 class="master-card-nm">Additive Product Manager</h3>
+          </div>
+
+          <div class="master-cards">
+            <img src="./images/111.png" alt="" />
+            <h2 class="master-card-name">Shervin Mashayekh</h2>
+            <h3 class="master-card-nm">Additive Product Manager</h3>
+          </div>
+
+          <div class="master-cards">
+            <img src="./images/23423.png" alt="" />
+            <h2 class="master-card-name">Shervin Mashayekh</h2>
+            <h3 class="master-card-nm">Additive Product Manager</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- master qismi tufgadi -->
+    <!-- faq qismi boshlandi  -->
+    <div class="container">
+      <div class="faq-section">
+        <div class="session-sarlavha aa11">
+          <h1 class="session-saelavham aa03">Frequently Asked Questions</h1>
+        </div>
+
+        <div class="accardion1">
+          <button class="accordion">
+            <p class="aa15">
+              Does this course need any special requirements?
+              <i class="fas fa-plus"></i>
+            </p>
+          </button>
+          <div class="panel">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+
+          <button class="accordion">
+            <p class="aa15">
+              Does this course need any special requirements?
+              <i class="fas fa-plus"></i>
+            </p>
+          </button>
+          <div class="panel">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+
+          <button class="accordion">
+            <p class="aa15">
+              Does this course need any special requirements?
+              <i class="fas fa-plus"></i>
+            </p>
+          </button>
+          <div class="panel">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+
+          <button class="accordion">
+            <p class="aa15">
+              Does this course need any special requirements?
+              <i class="fas fa-plus"></i>
+            </p>
+          </button>
+          <div class="panel">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      var acc = document.getElementsByClassName("accordion");
+      var i;
+
+      for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function () {
+          this.classList.toggle("active");
+          var panel = this.nextElementSibling;
+          if (panel.style.display === "block") {
+            panel.style.display = "none";
+          } else {
+            panel.style.display = "block";
+          }
+        });
+      }
+    </script>
+  </body>
 </html>
