--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -13,4 +14,78 @@
       crossorigin="anonymous"
     />
   </head>
+  <body>
+    <div class="container1">
+      <!-- our header started -->
+      <div class="header">
+        <img src="img/logo/Group 923.png" alt="" />
+        <a href="#Projects">Projects</a>
+        <a href="#Partners">Partners</a>
+        <a href="#FAQ">FAQ</a>
+        <a href="#Masters">Masters</a>
+        <a href="#Classes">Classes</a>
+        <a href="#Course_Experience">Course Experience</a>
+        <a href="#About_us">About us</a>
+        <a class="Register" href="#Register">Register</a>
+      </div>
+      <!-- our header finished -->
+      <!-- our Hero_slider started -->
+      <div class="Hero_slider">
+        <div class="Hero_one">
+          <h1>Product Design Course</h1>
+          <img class="Product_Factory" src="img/Hero_slider/Group.png" alt="" />
+          <p class="Hero_content">
+            Learn how design thinking, user research, <br />
+            business vision and marketing, and finally designing <br />
+            and creating real digital products for real users.
+          </p>
+          <button class="Start_Register">Start Register</button>
+        </div>
+        <div class="Hero_img">
+          <img src="img/Hero_slider/kia_ux_course.png" alt="" />
+        </div>
+      </div>
+      <!-- our Hero_slider finished -->
+      <!-- our about us started -->
+    </div>
+    <div id="About_us" class="container2">
+      <div class="about_us_page">
+        <img class="about_us_one" src="img/about_us/Group 826.png" alt="" />
+        <img class="about_us_two" src="img/about_us/about.png" alt="" />
+        <a href="https://magicsoft.uz/"
+          ><img
+            class="about_us_three"
+            src="img/about_us/button_icon.png"
+            alt=""
+        /></a>
+        <p class="Hero_content about_us_page_content">
+          Today, given the economic and labor market conditions, the best and
+          least risky way to invest is to invest in personal assets and skills.
+          UI / UX Product Design Course covers all aspects of product design
+          from product thinking and design to user-centric research and product
+          research and business vision and digital marketing.
+        </p>
+        <!-- our about_us page finished -->
+      </div>
+    </div>
+    <div id="Course_Experience" class="Course_Experience">
+      <img src="img/experience/Experience.png" alt="" />
+      <div class="Course_Experience_menu">
+        <p>After attending the course</p>
+        <p class="border_content">During the period</p>
+        <p>During the period</p>
+      </div>
+      <div class="Course_Experience_content2">
+        <img src="img/experience/Group 925.png" alt="" />
+        <p class="about_us_page_content Hero_content Experience_content">
+          This course has been attempted by zero people who are eager to learn
+          product design, especially user experience and user interface, so it
+          is not a prerequisite, but due to the limited capacity of the priority
+          course with early enrolled people, others can participate in future
+          courses. .  Obviously, the ability to use tools like Adobe Photoshop
+          and Adobe Illustrator as well as Microsoft Word, Excel tools.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
