--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/queries.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -478,201 +479,201 @@
       </div>
     </div>
 
-  
-
-  <div class="empty-litle"></div>
-  <div class="section-course container" id="Classes">
-    <p class="course-big">Course fee</p>
-    <p class="course-litle">Course</p>
     <div class="empty-litle"></div>
-    <div class="flex-course">
-      <div class="right-course">
-        <p class="title">
-          What will be our achievements by participating in this course?
-        </p>
-        <div class="check">
-          <i class="fas fa-check-circle"></i>
-          <p class="text-course">
-            Learn the requirements of a product designer from experienced
-            professionals in the field.
+    <div class="section-course container" id="Classes">
+      <p class="course-big">Course fee</p>
+      <p class="course-litle">Course</p>
+      <div class="empty-litle"></div>
+      <div class="flex-course">
+        <div class="right-course">
+          <p class="title">
+            What will be our achievements by participating in this course?
           </p>
-        </div>
-        <div class="check">
-          <i class="fas fa-check-circle"></i>
-          <p class="text-course">
-            Learn the requirements of a product designer from experienced
-            professionals in the field.
-          </p>
-        </div>
-        <div class="check">
-          <i class="fas fa-check-circle"></i>
-          <p class="text-course">
-            Learn the requirements of a product designer from experienced
-            professionals in the field.
-          </p>
-        </div>
-        <div class="check">
-          <i class="fas fa-check-circle"></i>
-          <p class="text-course">
-            Learn the requirements of a product designer from experienced
-            professionals in the field.
-          </p>
-        </div>
-      </div>
-      <div class="left-course">
-        <div class="one-left">
-          <del
-            ><p class="number">4000000</p>
-            <p class="toman">Toman</p>
-          </del>
-        </div>
-        <div class="two-right">
-          <p class="big-number">2300000</p>
-          <p class="tomom">Toman</p>
-        </div>
-        <p class="right-text">Possibility to pay periodic installment fee.</p>
-        <button type="submit" class="reg">Register</button>
-      </div>
-    </div>
-    <div class="empty-big"></div>
-    <p class="center-text">
-      Possibility of refund prior to the third session if the course quality is
-      not satisfied.
-    </p>
-  </div>
-  <div class="empty-big"></div>
-  <div class="empty-big"></div>
-  <div class="request">
-    <div class="empty-big"></div>
-    <div class="container req-flex">
-      <div class="req-right">
-        <p class="request-txt">Request a list of headings</p>
-        <p class="request-ctxt">
-          Please enter your email address to receive course titles, the topics
-          will be emailed to you.
-        </p>
-        <input type="email" placeholder="AfshinT2Y@gmail.com" />
-        <div class="btm-req">
-          <i class="fas fa-check-circle"></i>
-          <p class="request-2">
-            Your email has been successfully registered, headlines will be sent
-            to you soon.
-          </p>
-        </div>
-      </div>
-      <div class="req-image">
-        <img src="images/Union 3.png" alt="" class="big-img" />
-        <img src="images/Union 4.png" alt="" class="litle-img" />
-      </div>
-    </div>
-    <div class="empty-big"></div>
-  </div>
-  <div class="empty-big"></div>
-  <div class="empty-big"></div>
-  <div class="projects container " id="Projects">
-    <p class="course-big">Projects</p>
-    <p class="course-litle">Projects</p>
-    <div class="empty-litle"></div>
-    <div class="empty-big"></div>
-    <div class="flex-pro">
-      <div class="proj-right">
-        <div class="circle">
-          <div class="circ"></div>
-          <p class="desig">Design To Do List app</p>
-        </div>
-        <p class="pro-txt">
-          The previous student design project was the To Do List application
-          product factory, The counter examples are the result of the efforts of
-          the students and their teamwork in the first course.
-        </p>
-        <div class="pro-check">
-          <div class="btm-req">
+          <div class="check">
             <i class="fas fa-check-circle"></i>
-            <p class="pro-text">
-              Experience teamwork in a real product team and a collaborative
-              effort
+            <p class="text-course">
+              Learn the requirements of a product designer from experienced
+              professionals in the field.
             </p>
           </div>
-          <div class="btm-req">
+          <div class="check">
             <i class="fas fa-check-circle"></i>
-            <p class="pro-text">
-              Experience teamwork in a real product team and a collaborative
-              effort
+            <p class="text-course">
+              Learn the requirements of a product designer from experienced
+              professionals in the field.
             </p>
           </div>
-          <div class="btm-req">
+          <div class="check">
             <i class="fas fa-check-circle"></i>
-            <p class="pro-text">
-              Experience teamwork in a real product team and a collaborative
-              effort
+            <p class="text-course">
+              Learn the requirements of a product designer from experienced
+              professionals in the field.
+            </p>
+          </div>
+          <div class="check">
+            <i class="fas fa-check-circle"></i>
+            <p class="text-course">
+              Learn the requirements of a product designer from experienced
+              professionals in the field.
             </p>
           </div>
         </div>
-        <div class="pro-btm">
-          <p class="son">4/15</p>
+        <div class="left-course">
+          <div class="one-left">
+            <del
+              ><p class="number">4000000</p>
+              <p class="toman">Toman</p>
+            </del>
+          </div>
+          <div class="two-right">
+            <p class="big-number">2300000</p>
+            <p class="tomom">Toman</p>
+          </div>
+          <p class="right-text">Possibility to pay periodic installment fee.</p>
+          <button type="submit" class="reg">Register</button>
         </div>
       </div>
-      <div class="pro-left">
-        <div class="gor"></div>
-        <div class="ver"></div>
-        <div class="pro-ico">
-          <i class="far fa-chevron-square-left"></i>
-          <i class="far fa-chevron-square-right"></i>
+      <div class="empty-big"></div>
+      <p class="center-text">
+        Possibility of refund prior to the third session if the course quality
+        is not satisfied.
+      </p>
+    </div>
+    <div class="empty-big"></div>
+    <div class="empty-big"></div>
+    <div class="request">
+      <div class="empty-big"></div>
+      <div class="container req-flex">
+        <div class="req-right">
+          <p class="request-txt">Request a list of headings</p>
+          <p class="request-ctxt">
+            Please enter your email address to receive course titles, the topics
+            will be emailed to you.
+          </p>
+          <input type="email" placeholder="AfshinT2Y@gmail.com" />
+          <div class="btm-req">
+            <i class="fas fa-check-circle"></i>
+            <p class="request-2">
+              Your email has been successfully registered, headlines will be
+              sent to you soon.
+            </p>
+          </div>
+        </div>
+        <div class="req-image">
+          <img src="images/Union 3.png" alt="" class="big-img" />
+          <img src="images/Union 4.png" alt="" class="litle-img" />
+        </div>
+      </div>
+      <div class="empty-big"></div>
+    </div>
+    <div class="empty-big"></div>
+    <div class="empty-big"></div>
+    <div class="projects container" id="Projects">
+      <p class="course-big">Projects</p>
+      <p class="course-litle">Projects</p>
+      <div class="empty-litle"></div>
+      <div class="empty-big"></div>
+      <div class="flex-pro">
+        <div class="proj-right">
+          <div class="circle">
+            <div class="circ"></div>
+            <p class="desig">Design To Do List app</p>
+          </div>
+          <p class="pro-txt">
+            The previous student design project was the To Do List application
+            product factory, The counter examples are the result of the efforts
+            of the students and their teamwork in the first course.
+          </p>
+          <div class="pro-check">
+            <div class="btm-req">
+              <i class="fas fa-check-circle"></i>
+              <p class="pro-text">
+                Experience teamwork in a real product team and a collaborative
+                effort
+              </p>
+            </div>
+            <div class="btm-req">
+              <i class="fas fa-check-circle"></i>
+              <p class="pro-text">
+                Experience teamwork in a real product team and a collaborative
+                effort
+              </p>
+            </div>
+            <div class="btm-req">
+              <i class="fas fa-check-circle"></i>
+              <p class="pro-text">
+                Experience teamwork in a real product team and a collaborative
+                effort
+              </p>
+            </div>
+          </div>
+          <div class="pro-btm">
+            <p class="son">4/15</p>
+          </div>
+        </div>
+        <div class="pro-left">
+          <div class="gor"></div>
+          <div class="ver"></div>
+          <div class="pro-ico">
+            <i class="far fa-chevron-square-left"></i>
+            <i class="far fa-chevron-square-right"></i>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="empty-big"></div>
-  <div class="empty-big"></div>
-  <div class="foot-section">
-    <div class="footer container">
-      <p class="course-big">Schedule</p>
-      <p class="course-litle">Schedule</p>
-      <div class="empty-big"></div>
-      <div class="sched-one">
-        <p class="sched-start">Start of course</p>
-        <div class="dashed"></div>
-        <p class="sched-start">End of Course</p>
-      </div>
-      <div class="empty-big"></div>
-      <div class="empty-big"></div>
-      <div class="sched-date">
-        <div class="start-date">
-          <p>2019    /    08 /    11</p>
+    <div class="empty-big"></div>
+    <div class="empty-big"></div>
+    <div class="foot-section">
+      <div class="footer container">
+        <p class="course-big">Schedule</p>
+        <p class="course-litle">Schedule</p>
+        <div class="empty-big"></div>
+        <div class="sched-one">
+          <p class="sched-start">Start of course</p>
+          <div class="dashed"></div>
+          <p class="sched-start">End of Course</p>
         </div>
-        <div class="start-date">
-          <p>2019    /    08 /    11</p>
+        <div class="empty-big"></div>
+        <div class="empty-big"></div>
+        <div class="sched-date">
+          <div class="start-date">
+            <p>2019 / 08 / 11</p>
+          </div>
+          <div class="start-date">
+            <p>2019 / 08 / 11</p>
+          </div>
         </div>
-      </div>
-      <div class="empty-big"></div>
-      <div class="empty-big"></div>
-      <div class="onbir">
-        <p class="sched-btm"><span>11</span> Days left to sign up</p>
-        <button type="submit" class="reg">Register</button>
+        <div class="empty-big"></div>
+        <div class="empty-big"></div>
+        <div class="onbir">
+          <p class="sched-btm"><span>11</span> Days left to sign up</p>
+          <button type="submit" class="reg">Register</button>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="empty-big"></div>
-  <div class="empty-big"></div>
-  <div class="container"><img src="images/Group 909.png" alt="" /></div>
-  <div class="empty-big"></div>
-  <div class="empty-big"></div>
-  
-  <script>
-    var acc = document.getElementsByClassName("accordion");
-    var i;
+    <div class="empty-big"></div>
+    <div class="empty-big"></div>
+    <div class="container">
+      <img src="images/Group 909.png" alt="" class="container-img" />
+    </div>
+    <div class="empty-big"></div>
+    <div class="empty-big"></div>
 
-    for (i = 0; i < acc.length; i++) {
-      acc[i].addEventListener("click", function () {
-        this.classList.toggle("active");
-        var panel = this.nextElementSibling;
-        if (panel.style.display === "block") {
-          panel.style.display = "none";
-        } else {
-          panel.style.display = "block";
-        }
-      });
-    }
-  </script>
-</body>
+    <script>
+      var acc = document.getElementsByClassName("accordion");
+      var i;
+
+      for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function () {
+          this.classList.toggle("active");
+          var panel = this.nextElementSibling;
+          if (panel.style.display === "block") {
+            panel.style.display = "none";
+          } else {
+            panel.style.display = "block";
+          }
+        });
+      }
+    </script>
+  </body>
 </html>
