course style end

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="/css/general.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -14,3 +15,71 @@
     />
   </head>
 </html>
+<body>
+  <div class="empty-litle"></div>
+  <div class="section-course container">
+    <p class="course-big">Course fee</p>
+    <p class="course-litle">Course</p>
+    <div class="empty-litle"></div>
+    <div class="flex-course">
+      <div class="right-course">
+        <p class="title">
+          What will be our achievements by participating in this course?
+        </p>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+          <p class="text-course">
+            Learn the requirements of a product designer from experienced
+            professionals in the field.
+          </p>
+        </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+          <p class="text-course">
+            Learn the requirements of a product designer from experienced
+            professionals in the field.
+          </p>
+        </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+          <p class="text-course">
+            Learn the requirements of a product designer from experienced
+            professionals in the field.
+          </p>
+        </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+          <p class="text-course">
+            Learn the requirements of a product designer from experienced
+            professionals in the field.
+          </p>
+        </div>
+      </div>
+      <div class="left-course">
+        <div class="one-left">
+          <del
+            ><p class="number">4000000</p>
+            <p class="toman">Toman</p>
+          </del>
+        </div>
+        <div class="two-right">
+          <p class="big-number">2300000</p>
+          <p class="tomom">Toman</p>
+        </div>
+        <p class="right-text">Possibility to pay periodic installment fee.</p>
+        <button type="submit" class="reg">Register</button>
+      </div>
+    </div>
+    <div class="empty-big"></div>
+    <p class="center-text">
+      Possibility of refund prior to the third session if the course quality is
+      not satisfied.
+    </p>
+  </div>
+  <div class="empty-big"></div>
+  <div class="empty-big"></div>
+  <div class="request">
+    <p class="request">Request a list of headings</p>
+    <p class="request-l">Please enter your email address to receive course titles, the topics will be emailed to you.</p>
+  </div>
+</body>
