--- a/index.html
+++ b/index.html
@@ -79,7 +79,30 @@
   <div class="empty-big"></div>
   <div class="empty-big"></div>
   <div class="request">
-    <p class="request">Request a list of headings</p>
-    <p class="request-l">Please enter your email address to receive course titles, the topics will be emailed to you.</p>
+    <div class="empty-big"></div>
+    <div class="container req-flex">
+      <div class="req-right">
+        <p class="request-txt">Request a list of headings</p>
+        <p class="request-ctxt">
+          Please enter your email address to receive course titles, the topics
+          will be emailed to you.
+        </p>
+        <input type="email" placeholder="AfshinT2Y@gmail.com" />
+        <div class="btm-req">
+          <i class="fas fa-check-circle"></i>
+          <p class="request-2">
+            Your email has been successfully registered, headlines will be sent
+            to you soon.
+          </p>
+        </div>
+      </div>
+      <div class="req-image">
+        <img src="images/Union 3.png" alt="" class="big-img" />
+        <img src="images/Union 4.png" alt="" class="litle-img" />
+      </div>
+    </div>
+    <div class="empty-big"></div>
   </div>
+  <div class="empty-big"></div>
+  <div class="empty-big"></div>
 </body>
